<resources>
    <string name="app_name">Transparencia Digital</string>
    <string name="app_name2">Transparencia\r\nDigital</string>
    <string name="apiMapas">AIzaSyCXbQ2nOh4wc5aCwvY-ROcY_SwUnUuoUYQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="itai">ITAI</string>
    <string name="itai1">Instituto de Transparencia y Acceso a la Información Pública del. Estado de Baja California Sur</string>
    <string name="itai2">Instituto de Transparencia</string>
    <string name="hello_blank_fragment">Te falta disenar esto, sí, lo se, falta la enie.</string>
    <string name="quienessomostexto">El Instituto es un organismo constitucional autónomo, especializado, imparcial y colegiado, con personalidad jurídica y patrimonio propio, el cual gozará de plena autonomía técnica, de gestión, capacidad para decidir sobre el ejercicio de su presupuesto y determinar su organización interna, responsable de garantizar el cumplimiento del derecho a la transparencia, acceso a la información pública y a la protección de datos personales en posesión de los sujetos obligados. El Instituto no se encuentra subordinado a ninguna autoridad. Las resoluciones del Instituto, en materia de clasificación de información y acceso a la información, serán vinculantes, definitivas e inatacables para todos los sujetos obligados.</string>
    <string name="articulo32">Artículo 32° Ley de Transparencia y Acceso a la Información Pública del Estado de Baja California Sur</string>
    <string name="articulo33">Artículo 33° Ley de Transparencia y Acceso a la Información Pública del Estado de Baja California Sur</string>
    <string name="comoseintegra">¿Cómo se integra?</string>
    <string name="comoseintegratexto">El Instituto se integra por:\n\n
        I. El Consejo General, que es el órgano máximo de gobierno;\n
        II. Comisionados;\n
        III. Secretaria Ejecutiva;\n
        IV. Las unidades administrativas que establezca su Reglamento Interior que mínimamente deberán ser: Jurídica, Capacitación y Difusión, Administración, Control Interno, Tecnologías de la Información y las demás que su Reglamento prevea y\n
        V.	Las representaciones del Instituto que de manera justificada apruebe el Consejo General.\n\n
        El Instituto contará además con un Consejo Consultivo, él cual se regirá por las disposiciones de la presente Ley.


    </string>
    <string name="mision">Misión</string>
    <string name="misiontexto">Garantizar el cumplimiento del derecho humano al acceso a la información pública y protección de datos personales en posesión de los sujetos obligados.</string>
    <string name="vision">Visión</string>
    <string name="visiontexto">Ser una institución comprometida con la sociedad Sudcaliforniana, atendiendo en su funcionamiento los principios de certeza, eficacia, imparcialidad, independencia, legalidad, objetividad, transparencia, profesionalismo y máxima publicidad.</string>
    <string name="objetivo">Objetivo</string>
    <string name="objetivotexto">Consolidar en Baja California Sur, la cultura por la transparencia, el ejercicio del derecho al acceso a la información pública, la protección de datos personales y la debida rendición de cuentas.</string>
    <string name="estructuraorganica">Estructura Orgánica</string>
    <string name="estructuraorganicatexto">Artículo 4°.- Para el ejercicio de sus facultades y el despacho de los asuntos que le competen, el Instituto contará con la siguiente estructura:\n\n
        I. Consejo General;\n
        II. Presidencia del Consejo;\n
        III. Comisionados;\n
        IV. Secretaría Ejecutiva;\n
        V. Unidades Administrativas: Administración; Capacitación y Difusión; Jurídica; Tecnologías de la Información.\n\n
        El demás personal técnico y administrativo, que autorice el Consejo General a propuesta del Comisionado Presidente, de acuerdo a la disponibilidad presupuestaria.\n\n

        Artículo 5°.-El Instituto contará con un Órgano Interno de Control, encargado de la supervisión y vigilancia del uso de los recursos públicos asignados para su funcionamiento; así como el debido desempeño del personal y el cumplimiento de los programas establecidos por el Consejo General;\n\n
        Artículo 6°.- El Instituto contará con un Consejo Consultivo, con funciones de consulta y asesoría, en la planeación y promoción de las actividades relacionadas con la transparencia y acceso a la información pública, atendiendo a las disposiciones que establece la Ley.\n
    </string>
    <string name="reglamentointerior">Reglamento Interior del Instituto de Transparencia, Acceso a la Información Pública y Protección de Datos Personales del Estado de Baja California Sur</string>
    <string name="consultarestructuraorganica">Puede ver mejor la estructura orgánica dando click en el siguiente botón .</string>
    <string name="botonconsultarestructura">Consultar Estructura Orgánica</string>
    <string name="consultarcalendario">Puede ver mejor el calendario dando click en el siguiente botón .</string>
    <string name="botonconsultarcalendario">Consultar Calendario Oficial</string>
    <string name="marconormativo">Marco Normativo</string>
    <string name="constitucionpolitica">Constitución Política</string>
    <string name="constitucionpolitica1">Constitución Política de los Estados Unidos Mexicanos. (Última reforma publicada DOF 29-01-2016)</string>
    <string name="constitucionpolitica2">Constitución Política del Estado Libre y Soberano de Baja California Sur. (Última reforma publicada BOGE 31-07-2016)</string>
    <string name="acuerdos">Acuerdos</string>
    <string name="acuerdotexto">Acuerdo mediante el cual el Consejero General del Instittuto de Transparencia, Acceso a la Información Pública y Protección de Datos Personales del Estado de Baja California Sur, aprueba el padrón de Sujetos Obligados en el Estado de Baja California Sur, en términos de la Ley de Transparencia y Acceso a la Información Pública del Estado de Baja California Sur.</string>
    <string name="acuerdos1">Acuerdo Catalogo Sujetos Obligados</string>
    <string name="codigo">Código</string>
    <string name="codigo1">Código de Procedimientos Civiles para el Estado de Baja California Sur. (Última reforma publicada BOGE 20-08-2016)</string>
    <string name="codigo2">Código Fiscal de la Federación (Última reforma publicada 17-06-2016)</string>
    <string name="criterios">Criterios</string>
    <string name="criterios1">Criterios para el cobro en la reproducción o copiado de información pública</string>
    <string name="leyes">Leyes</string>
    <string name="leyes1">Ley de Transparencia y Acceso a la Información Pública del Estado de Baja California Sur. (Ley publicada 26-05-2016)</string>
    <string name="leyes2">Ley de Responsabilidades de los Servidores Públicos del Estado. (Última reforma publicada BOGE 20-12-2015)</string>
    <string name="leyes3">Ley de Justicia Administrativa para El Estado De Baja California Sur. (Última reforma publicada BOGE 66 Ext. 24-12-2008)</string>
    <string name="leyes4">Ley de Remuneraciones de los Servidores Públicos del Estado y los Municipios de Baja California Sur. (Última reforma publicada BOGE 20-03-2011)</string>
    <string name="leyes5">Ley General de Contabilidad Gubernamental. (Última reforma publicada DOF 18-07-2016)</string>
    <string name="leyes6">Ley de Adquisiciones, Arrendamientos y Servicios del Estado de Baja California Sur. (Última reforma publicada BOGE 20-11-2014)</string>
    <string name="leyes7">Ley de Presupuesto y Control Del Gasto Publico Estatal. (Última reforma publicada BOGE 20-11-2014)</string>
    <string name="leyes8">Ley de Ingresos del Estado de Baja Califronia Sur. (Ley publicada BOGE.62 31-12-2014)</string>
    <string name="leyes9">Ley de Desarrollo Institucional del Estado de Baja California Sur. (Última reforma publicada BOE 31-12-2015)</string>
    <string name="leyes10">Ley del Órgano de Fiscalización Superior del Estado de Baja California Sur (Última reforma publicada BOGE 20-12-2015)</string>
    <string name="leyes11">Ley de Derechos y Productos del Estado (Última reforma publicada BOGE 10-04-2016)</string>
    <string name="leyes12">Ley del Seguro Social (Última reforma publicada 12-11-2015)</string>
    <string name="leyes13">Ley Federal del Trabajo (última reforma publicada 12-06-2015)</string>
    <string name="leyes14">Ley General de Transparencia (última reforma publicada  04-05-2015)</string>
    <string name="leyes15">Ley de Transparencia y Acceso a la Información Pública para el Estado de Baja California Sur 2005.(Abrogada Publicada 20-03-2005)</string>
    <string name="leyes16">Ley de Transparencia y Acceso a la Información Pública para el Estado de Baja California Sur 2005.(Abrogada última reforma publicada 30-11-2007)</string>
    <string name="leyes17">Ley de Transparencia y Acceso a la Información Pública para el Estado de Baja California Sur 2010.(Abrogada Publicada 12-03-2010)</string>
    <string name="lineamientos">Lineamientos</string>
    <string name="lineamientos1">Lineamientos generales para la clasificación y desclasificación de la información reservada y confidencial en poder de las entidades gubernamentales y las de interés público a que se refiere la Ley de Transparencia y Acceso a la Información Pública para el Estado de Baja California Sur.(Abrogada)</string>
    <string name="lineamientos2">Lineamientos y políticas generales para el manejo, mantenimiento, seguridad y protección de los datos personales que estén en posesión de las entidades gubernamentales y las de interés público del Estado de Baja California Sur.</string>
    <string name="lineamientos3">Lineamientos generales para la sustanciacion del procedimiento de revision.</string>
    <string name="missolisitudes">Mis Solicitudes</string>
    <string name="solicituddeinformacion">Solicitud de Información</string>
    <string name="denunciaporincumplimiento">Denuncia por Incumplimiento</string>
    <string name="sujetosobligados">Sujetos Obligados</string>
    <string name="encuentranos">Encuéntranos</string>
    <string name="salir">Salir</string>
    <string name="quienessomos">¿Quiénes somos?</string>
    <string name="sitiosdeinteres">Sitios de Interés</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="titulonombre">Nombre completo de persona física</string>
    <string name="nombre">Nombre (s)</string>
    <string name="paterno">Apellido paterno</string>
    <string name="materno">Apellido materno</string>
    <string name="contrasena2">Repetir contraseña</string>
    <string name="domicilio">Domicilio</string>
    <string name="calle">Calle</string>
    <string name="nexterior">Num. Exterior</string>
    <string name="ninterior">Num. Interior</string>
    <string name="entrecalles">Entre las calles</string>
    <string name="colonia">Colonia</string>
    <string name="cp">C.P.</string>
    <string name="entidadfederativa">Entidad federativa</string>
    <string name="telefono">Teléfono</string>
    <string name="numtelefonico">Número telefónico</string>
    <string name="sujetoobligado">Sujeto Obligado</string>
    <string name="incumplimiento">Incumplimiento</string>
    <string name="incumplimientohint">Descripción clara y precisa del incumplimiento denunciado.</string>
    <string name="informacionsolicitada">Información solicitada</string>
    <string name="informacionsolicitadahint">Descripción clara y precisa de la información solicitada. Con el fin de brindar un mejor servicio, además de describir la información o documentos que solicita, se sugiere proporcionar todos los datos que considere facilitan su búsqueda.</string>
</resources>