<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="transparencia.itai.com.transparenciadigital.MisDatos">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:clickable="true"
        android:visibility="gone"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/btnEditar"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/contrasena" />

            <EditText
                android:id="@+id/editContra1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editContra2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrasena2"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/titulonombre" />

            <EditText
                android:id="@+id/editNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/paterno"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/materno"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/domicilio" />

            <EditText
                android:id="@+id/editDomicilioCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/calle"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editDomicilioExterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nexterior"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editDomicilioInterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ninterior"
                    android:inputType="number" />

            </LinearLayout>

            <EditText
                android:id="@+id/editDomicilioEntreCalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/entrecalles"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editDomicilioColonia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/colonia"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editDomicilioCP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cp"
                    android:inputType="number" />
            </LinearLayout>

            <EditText
                android:id="@+id/editDomicilioEntidadFederativa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/entidadfederativa"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spinnDomicilioMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/editTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/numtelefonico"
                android:inputType="phone" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
