<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="transparencia.itai.com.transparenciadigital.NuevaSolicitudDenuncia">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sujetoobligado" />

            <AutoCompleteTextView
                android:id="@+id/editSujetoO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionHint="Seleccionar el sujeto obligado"
                android:lines="1" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/incumplimiento" />

            <EditText
                android:id="@+id/editDescripcionIncumplimiento"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:ems="10"
                android:hint="@string/incumplimientohint"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnTerminarSolicitudDenuncia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_menu_send" />
</RelativeLayout>
