<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="transparencia.itai.com.transparenciadigital.NuevaSolicitudAcceso">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/layoutSolicitudAcceso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sujetoobligado" />

                <AutoCompleteTextView
                    android:id="@+id/editSujeto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionHint="Seleccionar el sujeto obligado" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="@string/informacionsolicitada" />

                <EditText
                    android:id="@+id/editDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/informacionsolicitadahint"
                    android:inputType="textMultiLine"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:text="Modalidad en que se desea le sea entregada la información " />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioOpcion1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Consulta directa" />

                    <RadioButton
                        android:id="@+id/radioOpcion2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Copia simple" />

                    <RadioButton
                        android:id="@+id/radioOpcion3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Copia simple con costo más de 20 hojas" />

                    <RadioButton
                        android:id="@+id/radioOpcion4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Copia certificada costo" />

                    <RadioButton
                        android:id="@+id/radioOpcion5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Correo electrónico" />

                    <RadioButton
                        android:id="@+id/radioOpcion6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Digitalizada" />



                </RadioGroup>

            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnTerminarSolicitudAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="13dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_menu_send" />
    </RelativeLayout>

</FrameLayout>
